<resources>
    <string name="app_name">Test2</string>
    <string name="explorer">Explorer</string>
    <string name="select_category">Select category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="new_">New</string>
    <string name="price">$%s</string>
    <string name="old_price"><del>$%s</del></string>
    <string name="product_details">Product details</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="capacity">%s Gb</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="add_to_cart">Add to Cart $%s</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">$%s us</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="search">Search</string>
    <string name="zihuatanejo_gro">Zihuatanejo, Gro</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price_s">Price</string>
    <string name="size">Size</string>
</resources>