<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F8F8">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/location"
            android:tint="@color/color1"
            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentLocation"
            app:layout_constraintEnd_toStartOf="@+id/tvCurrentLocation" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCurrentLocation"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zihuatanejo_gro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentLocation"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentLocation" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFilter"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_filter_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentLocation"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/color1"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_back"
            android:elevation="4dp"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@+id/ivScanQrCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvCategory"
            app:queryHint="@string/search"
            app:searchIcon="@drawable/ic_baseline_search_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivScanQrCode"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/splash_circle"
            android:padding="8dp"
            android:src="@drawable/qr_code"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hot_sales"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/color1"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView3"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpHotSales"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintDimensionRatio="1.5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/best_seller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vpHotSales" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/color1"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView5"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBestSeller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>