<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color2"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLocation"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/color1"
        android:src="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fabBack"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_address"
        app:layout_constraintBottom_toBottomOf="@+id/fabLocation"
        app:layout_constraintEnd_toStartOf="@+id/fabLocation"
        app:layout_constraintTop_toTopOf="@+id/fabLocation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/fabBack"
        app:layout_constraintTop_toBottomOf="@+id/fabBack" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-32dp"
        app:cardBackgroundColor="@color/color2"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="48dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color1"
                android:minHeight="55dp"
                android:text="@string/checkout"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".8"
                app:shapeAppearance="?attr/shapeAppearanceCornerMedium" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:background="#33FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/materialButton" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/delivery"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
                app:layout_constraintStart_toStartOf="@+id/guideline7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView8"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/total"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/materialTextView7"
                app:layout_constraintStart_toStartOf="@+id/guideline7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalPrice"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView8"
                app:layout_constraintStart_toStartOf="@+id/guideline8" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDelivery"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView7"
                app:layout_constraintStart_toStartOf="@+id/guideline8" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCartItems"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/materialTextView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>